--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,33 @@
 
+@Article{	  hoeksema2017not-that,
+  author	= {Hoeksema, Jack},
+  journal	= {Linguistics},
+  number	= {6},
+  title		= {Not that I know of: A polarity-sensitive construction},
+  volume	= {55},
+  year		= {2017}
+}
+
+@Article{	  gotzner2020choice,
+  author	= {Gotzner, Nicole and Romoli, Jacopo and Santorio, Paolo},
+  journal	= {Natural Language Semantics},
+  number	= {2},
+  pages		= {141--174},
+  title		= {Choice and prohibition in non-monotonic contexts},
+  volume	= {28},
+  year		= {2020}
+}
+
+@Article{	  mandelkern2020definitness,
+  author	= {Mandelkern, Matthew and Rothschild, Daniel},
+  journal	= {Natural Language Semantics},
+  number	= {2},
+  pages		= {77--109},
+  title		= {Definiteness projection},
+  volume	= {28},
+  year		= {2020}
+}
+
 @Article{	  hayashi2020labeling,
   author	= {Hayashi, Norimasa},
   journal	= {Syntax},
