--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,39 @@
 
+@InBook{	  beck2015events-lf,
+  address	= {Berlin, M{\"u}nchen, Boston},
+  author	= {Beck, Sigrid and Stechow, Arnim von},
+  booktitle	= {Situationsargumente im Nominalbereich},
+  editor	= {Fortmann, Christian and L{\"u}bbe, Anja and Rapp, Irene},
+  pages		= {13-46},
+  publisher	= {DE GRUYTER},
+  title		= {Events, Times and Worlds -- An LF Architecture},
+  year		= {2015}
+}
+
+@InBook{	  schwarzschild2020scalar,
+  author	= {Schwarzschild, Roger},
+  booktitle	= {Interactions of Degree and Quantification},
+  editor	= {Hallman, Peter},
+  publisher	= {BRILL},
+  title		= {From possible individuals to scalar segments},
+  year		= {2020}
+}
+
+@Book{		  gutzmann2019secondary,
+  editor	= {Gutzmann, Daniel and Turgay, Katharina},
+  publisher	= {BRILL},
+  title		= {Secondary Content},
+  year		= {2019}
+}
+
+@Article{	  eguren2020degree,
+  author	= {Eguren, Luis},
+  journal	= {Studia Linguistica},
+  title		= {Lexical Variation in Degree wh-questions in Spanish and
+		  the Internal Structure of wh-phrases},
+  year		= {2020}
+}
+
 @Article{	  hoeksema2017not-that,
   author	= {Hoeksema, Jack},
   journal	= {Linguistics},
