result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,15 @@
+@Article{Keine2019Copula,
+author = {Keine, Stefan and Wagner, Michael and Coon, Jessica}, 
+title = {Hierarchy effects in copula constructions}, 
+journal = {Canadian Journal of Linguistics/Revue canadienne de linguistique}, 
+volume = {64}, 
+number = {4}, 
+pages = {617–648}, 
+year = {2019}, 
+keywords = {copula; agreement; predication}}
+
+
+
 @phdthesis{Svenonius1994Nexus,
 author = {Svenonius, Peter}, 
 title = {Dependent nexus: Subordinate predication structures in English and the Scandinavian languages}, 
