--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,114 @@
 
+@PhDThesis{	  levin2015licensingcase,
+  author	= {Levin, Theodore Frank},
+  school	= {Massachusetts Institute of Technology},
+  title		= {Licensing without Case},
+  year		= {2015}
+}
+
+@Article{	  keine2019copula,
+  author	= {Keine, Stefan and Wagner, Michael and Coon, Jessica},
+  journal	= {Canadian Journal of Linguistics/Revue canadienne de
+		  linguistique},
+  number	= {4},
+  pages		= {617--648},
+  title		= {Hierarchy effects in copula constructions},
+  volume	= {64},
+  year		= {2019}
+}
+
+@InBook{	  brucart2000terminologia,
+  address	= {Barcelona},
+  author	= {Brucart, Josep M.},
+  booktitle	= {La terminologia ling{\"u}{\'i}stica en l'ensenyament
+		  secundari. Propostes pr{\`a}ctiques},
+  editor	= {Maci{\`a} Guil{\`a}, Jaume and Sol{\`a}, Joan},
+  pages		= {163-229},
+  publisher	= {Grao},
+  title		= {L'an{\`a}lisi sint{\`a}ctica i la seva terminologia en
+		  l'ensenyament secundari},
+  year		= {2000}
+}
+
+@Book{		  macia2000terminologia,
+  address	= {Barcelona},
+  editor	= {Maci{\`a} Guil{\`a}, Jaume and Sol{\`a}, Joan},
+  pages		= {240},
+  publisher	= {Grao},
+  title		= {La terminolog{\'i}a ling{\"u}{\'i}stica en l'ensenyament
+		  secundari},
+  year		= {2000}
+}
+
+@InBook{	  brucart2011la-presencia-de,
+  address	= {Barcelona},
+  author	= {Brucart, Josep M.},
+  editor	= {Camps, Anna},
+  pages		= {89-115},
+  publisher	= {Gra{\'o}},
+  title		= {La pres{\`e}ncia de la sintaxi en el curr{\'i}culum de
+		  llengua},
+  year		= {2011}
+}
+
+@Article{	  gallego2016reflexion,
+  author	= {Gallego, {\'A}ngel J.},
+  journal	= {Revista Espa{\~n}ola de Ling{\"u}{\'i}stica},
+  number	= {1},
+  pages		= {145-158},
+  title		= {Sobre los ejercicios de «reflexi{\'o}n gramatical»:
+		  malentendidos, ventajas metodol{\'o}gicas y aplicaciones
+		  did{\'a}cticas},
+  volume	= {46},
+  year		= {2016}
+}
+
+@Article{	  gutzmann2020verum,
+  author	= {Gutzmann, Daniel and Hartmann, Katharina and Matthewson,
+		  Lisa},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Verum focus is verum, not focus: Cross-linguistic
+		  evidence},
+  volume	= {5},
+  year		= {2020}
+}
+
+@Book{		  winter2019statistics,
+  address	= {London},
+  author	= {Winter, Bodo},
+  pages		= {310},
+  publisher	= {Routledge},
+  title		= {Statistics for Linguists: An Introduction Using R},
+  year		= {2019}
+}
+
+@Book{		  stefanowitsch1996corpus,
+  author	= {Stefanowitsch, Anatol},
+  pages		= {510},
+  publisher	= {Language Science Press},
+  title		= {Corpus linguistics},
+  year		= {1996}
+}
+
+@Book{		  keine2010case,
+  address	= {Berlin},
+  author	= {Keine, Stefan},
+  pages		= {240},
+  publisher	= {de Gruyter},
+  title		= {Case and Agreement from Fringe to Core},
+  year		= {2010}
+}
+
+@Book{		  keine2020probes,
+  address	= {Cambridge, Mass.},
+  author	= {Keine, Stefan},
+  pages		= {380},
+  publisher	= {MIT Press},
+  title		= {Probes and Their Horizons},
+  year		= {2020}
+}
+
 @InBook{	  beck2015events-lf,
   address	= {Berlin, M{\"u}nchen, Boston},
   author	= {Beck, Sigrid and Stechow, Arnim von},
