--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,44 @@
 
+@InBook{	  schwarz2020adjectival,
+  author	= {Schwarz, Bernhard},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Gutzmann, Daniel and Matthewson, Lisa and Meier,
+		  C{\'e}cile and Rullmann, Hotze and Zimmermann, Thomas Ede},
+  publisher	= {John Wiley & Sons},
+  title		= {Nonlocal Adjectival Modification},
+  year		= {2020}
+}
+
+@InBook{	  farkas2020nonspecificity,
+  author	= {Farkas, Donka F. and Brasoveanu, Adrian},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Gutzmann, Daniel and Matthewson, Lisa and Meier,
+		  C{\'e}cile and Rullmann, Hotze and Zimmermann, Thomas Ede},
+  publisher	= {John Wiley & Sons},
+  title		= {Kinds of (Non)Specificity},
+  year		= {2020}
+}
+
+@InBook{	  schwarz2020intensional,
+  author	= {Schwarz, Florian},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Gutzmann, Daniel and Matthewson, Lisa and Meier,
+		  C{\'e}cile and Rullmann, Hotze and Zimmermann, Thomas Ede},
+  publisher	= {John Wiley & Sons},
+  title		= {Intensional Transitive Verbs},
+  year		= {2020}
+}
+
+@InBook{	  beck2020universals,
+  author	= {Beck, Sigrid},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Gutzmann, Daniel and Matthewson, Lisa and Meier,
+		  C{\'e}cile and Rullmann, Hotze and Zimmermann, Thomas Ede},
+  publisher	= {John Wiley & Sons},
+  title		= {Semantic Parameters and Universals},
+  year		= {2020}
+}
+
 @PhDThesis{	  levin2015licensingcase,
   author	= {Levin, Theodore Frank},
   school	= {Massachusetts Institute of Technology},
