--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,202 @@
 
+@Article{	  lee2020names,
+  author	= {Lee, Junhyo},
+  journal	= {Linguistics and Philosophy},
+  number	= {3},
+  pages		= {277--301},
+  title		= {On the asymmetry between names and count nouns: syntactic
+		  arguments against predicativism},
+  volume	= {43},
+  year		= {2020}
+}
+
+@Article{	  batllori2020fronting,
+  author	= {Batllori, Montserrat and Sitaridou, Ioanna},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Fronting in Old Spanish},
+  volume	= {5},
+  year		= {2020}
+}
+
+@Article{	  collins2020outer,
+  author	= {Collins, Chris},
+  journal	= {Linguistics and Philosophy},
+  number	= {3},
+  pages		= {233--246},
+  title		= {Outer negation of universal quantifier phrases},
+  volume	= {43},
+  year		= {2020}
+}
+
+@Article{	  beltrama2020alternative,
+  author	= {Beltrama, Andrea and Meertens, Erlinde and Romero,
+		  Maribel},
+  journal	= {Semantics and Pragmatics},
+  number	= {5},
+  title		= {Alternative questions: Distinguishing between negated and
+		  complementary disjuncts},
+  volume	= {13},
+  year		= {2020}
+}
+
+@Article{	  craft2020discrimination,
+  author	= {Craft, Justin T. and Wright, Kelly E. and Weissler, Rachel
+		  Elizabeth and Queen, Robin M.},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {389--407},
+  title		= {Language and Discrimination: Generating Meaning,
+		  Perceiving Identities, and Discriminating Outcomes},
+  volume	= {6},
+  year		= {2020}
+}
+
+@Article{	  kramer2020gender,
+  author	= {Kramer, Ruth},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {45--66},
+  title		= {Grammatical Gender: A Close Look at Gender Assignment
+		  Across Languages},
+  volume	= {6},
+  year		= {2020}
+}
+
+@Article{	  ernst2020adverbials,
+  author	= {Ernst, Thomas},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {89--109},
+  title		= {The Syntax of Adverbials},
+  volume	= {6},
+  year		= {2020}
+}
+
+@Article{	  vanurk2020successive,
+  author	= {van Urk, Coppe},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {111--130},
+  title		= {Successive Cyclicity and the Syntax of Long-Distance
+		  Dependencies},
+  volume	= {6},
+  year		= {2020}
+}
+
+@Article{	  heaton2020antipassive,
+  author	= {Heaton, Raina},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {131--153},
+  title		= {Antipassives in Crosslinguistic Perspective},
+  volume	= {6},
+  year		= {2020}
+}
+
+@Article{	  dayal2020determiners,
+  author	= {Dayal, Veneeta and Sa{\u g}, Ya{\u g}mur},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {173--194},
+  title		= {Determiners and Bare Nouns},
+  volume	= {6},
+  year		= {2020}
+}
+
+@Article{	  hohaus2020degree,
+  author	= {Hohaus, Vera and Bochnak, M. Ryan},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {235--259},
+  title		= {The Grammar of Degree: Gradability Across Languages},
+  volume	= {6},
+  year		= {2020}
+}
+
+@Article{	  diaz-campos2020sociolinguistics,
+  author	= {D{\'i}az-Campos, Manuel and Escalona Torres, Juan M. and
+		  Filimonova, Valentyna},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {363--388},
+  title		= {Sociolinguistics of the Spanish-Speaking World},
+  volume	= {6},
+  year		= {2020}
+}
+
+@Article{	  shankweiler2019reading,
+  author	= {Shankweiler, Donald and Fowler, Carol A.},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {109--129},
+  title		= {Relations Between Reading and Speech Manifest Universal
+		  Phonological Principle},
+  volume	= {5},
+  year		= {2019}
+}
+
+@Article{	  boleda2020distributional,
+  author	= {Boleda, Gemma},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {213--234},
+  title		= {Distributional Semantics and Linguistic Theory},
+  volume	= {6},
+  year		= {2020}
+}
+
+@Article{	  bennett2019prosody,
+  author	= {Bennett, Ryan and Elfner, Emily},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {151--171},
+  title		= {The Syntax--Prosody Interface},
+  volume	= {5},
+  year		= {2019}
+}
+
+@Article{	  nevins2019closest,
+  author	= {Nevins, Andrew and Weisser, Philipp},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {219--241},
+  title		= {Closest Conjunct Agreement},
+  volume	= {5},
+  year		= {2019}
+}
+
+@Article{	  espinal2019fragment,
+  author	= {Espinal, M.Teresa and Tubau, Susagna},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {261--287},
+  title		= {Response Systems: The Syntax and Semantics of Fragment
+		  Answers and Response Particles},
+  volume	= {5},
+  year		= {2019}
+}
+
+@Article{	  lowe2019nonfinite,
+  author	= {Lowe, John J.},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {309--328},
+  title		= {The Syntax and Semantics of Nonfinite Forms},
+  volume	= {5},
+  year		= {2019}
+}
+
+@Article{	  meyerhoff2019gender,
+  author	= {Meyerhoff, Miriam and Ehrlich, Susan},
+  journal	= {Annual Review of Linguistics},
+  number	= {1},
+  pages		= {455--475},
+  title		= {Language, Gender, and Sexuality},
+  volume	= {5},
+  year		= {2019}
+}
+
 @InBook{	  schwarz2020adjectival,
   author	= {Schwarz, Bernhard},
   booktitle	= {The Wiley Blackwell Companion to Semantics},
@@ -5323,7 +5521,7 @@
   year		= {1985}
 }
 
-@Book{		  huddleston2002the-cambridge-g,
+@Book{		  pullum2002grammar,
   address	= {Cambridge, UK ; New York},
   author	= {Huddleston, Rodney D. and Pullum, Geoffrey K.},
   publisher	= {Cambridge University Press},
