--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,22 @@
 
+@Article{	  kaye1995thought,
+  author	= {Kaye, Lawrence J.},
+  journal	= {Philosophy of Science},
+  number	= {1},
+  pages		= {92--110},
+  title		= {The Languages of Thought},
+  volume	= {62},
+  year		= {1995}
+}
+
+@Article{	  dupre2020thought,
+  author	= {Dupre, Gabe},
+  journal	= {Linguistics and Philosophy},
+  title		= {What would it mean for natural language to be the language
+		  of thought},
+  year		= {2020}
+}
+
 @Article{	  lee2020names,
   author	= {Lee, Junhyo},
   journal	= {Linguistics and Philosophy},
