--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,47 @@
 
+@Article{	  elbourne2020weather,
+  author	= {Elbourne, Paul},
+  journal	= {Mind & Language},
+  title		= {Weather predicates, binding, and radical contextualism},
+  year		= {2020}
+}
+
+@Book{		  kroeger2019,
+  author	= {Kroeger, Paul R.},
+  pages		= {502},
+  publisher	= {Language Science Press},
+  title		= {Analyzing meaning},
+  year		= {2019}
+}
+
+@Article{	  bender2013fundamentals,
+  author	= {Bender, Emily M.},
+  journal	= {Synthesis Lectures on Human Language Technologies},
+  number	= {3},
+  pages		= {1--184},
+  title		= {Linguistic Fundamentals for Natural Language Processing:
+		  100 Essentials from Morphology and Syntax},
+  volume	= {6},
+  year		= {2013}
+}
+
+@Article{	  romoli2020multiplicity,
+  author	= {Romoli, Jacopo and Renans, Agata},
+  journal	= {Journal of Semantics},
+  title		= {Multiplicity and Modifiers},
+  year		= {2020}
+}
+
+@Article{	  martin2020neural,
+  author	= {Martin, Andrea E.},
+  journal	= {Journal of Cognitive Neuroscience},
+  number	= {8},
+  pages		= {1407--1427},
+  title		= {A Compositional Neural Architecture for Language},
+  volume	= {32},
+  year		= {2020}
+}
+
 @Article{	  kaye1995thought,
   author	= {Kaye, Lawrence J.},
   journal	= {Philosophy of Science},
@@ -12180,7 +12223,7 @@
   number	= {5},
   pages		= {609--658},
   publisher	= {Springer Netherlands},
-  title		= {On Negative {$<$}i{$>$}Yes/No{$<$}/i{$>$} Questions},
+  title		= {On Negative Yes/No Questions},
   volume	= {27},
   year		= {2004}
 }
