--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,86 @@
 
+@Article{	  neeleman2020pp,
+  author	= {Neeleman, Ad and Payne, Amanda},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {471--520},
+  title		= {PP-Extraposition and the Order of Adverbials in English},
+  volume	= {51},
+  year		= {2020}
+}
+
+@Article{	  folli2020head,
+  author	= {Folli, Raffaella and Harley, Heidi},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {425--470},
+  title		= {A Head Movement Approach to Talmy's Typology},
+  volume	= {51},
+  year		= {2020}
+}
+
+@Article{	  ostrove2020adjacency,
+  author	= {Ostrove, Jason},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {521--552},
+  title		= {Adjacency and Case Morphology in Scottish Gaelic},
+  volume	= {51},
+  year		= {2020}
+}
+
+@Article{	  richards2020contiguity,
+  author	= {Richards, Norvin},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {553--578},
+  title		= {Contiguity Theory and Pied-Piping},
+  volume	= {51},
+  year		= {2020}
+}
+
+@Article{	  bassi2020against,
+  author	= {Bassi, Itai and Longenbaugh, Nicholas},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {579--596},
+  title		= {Against Tanglewood by Focus Movement: A Reply to Erlewine
+		  and Kotek 2018},
+  volume	= {51},
+  year		= {2020}
+}
+
+@Article{	  ghomeshi2020number,
+  author	= {Ghomeshi, Jila and Massam, Diane},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {597--610},
+  title		= {Number is Different in Nominal and Pronominal Phrases},
+  volume	= {51},
+  year		= {2020}
+}
+
+@Article{	  lu2020chinesewh,
+  author	= {Lu, Jiayi and Thompson, Cynthia K. and Yoshida, Masaya},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {611--623},
+  title		= {Chinese Wh-in-Situ and Islands: A Formal Judgment Study},
+  volume	= {51},
+  year		= {2020}
+}
+
+@Article{	  zymet2020ocp,
+  author	= {Zymet, Jesse},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {624--634},
+  title		= {Malagasy OCP Targets a Single Affix: Implications for
+		  Morphosyntactic Generalization in Learning},
+  volume	= {51},
+  year		= {2020}
+}
+
 @Article{	  elbourne2020weather,
   author	= {Elbourne, Paul},
   journal	= {Mind & Language},
