--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,28 @@
 
+@Article{	  landau2020sluicing,
+  author	= {Landau, Idan},
+  journal	= {Syntax},
+  title		= {A Scope Argument against T‐to‐C Movement in Sluicing},
+  year		= {2020}
+}
+
+@Article{	  grodniewicz2020,
+  author	= {Grodniewicz, J. P.},
+  journal	= {Synthese},
+  title		= {The process of linguistic understanding},
+  year		= {2020}
+}
+
+@Article{	  kalpak2020concealed,
+  author	= {Kalpak, Hana},
+  journal	= {Semantics and Pragmatics},
+  number	= {7},
+  title		= {The semantics and pragmatics of nouns in concealed
+		  questions},
+  volume	= {13},
+  year		= {2020}
+}
+
 @Article{	  neeleman2020pp,
   author	= {Neeleman, Ad and Payne, Amanda},
   journal	= {Linguistic Inquiry},
