--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  altshuler2020bynow,
+  author	= {Altshuler, Daniel and Michaelis, Laura A.},
+  journal	= {Journal of Linguistics},
+  number	= {3},
+  pages		= {515--539},
+  title		= {By now: Change of state, epistemic modality and evidential
+		  inference},
+  volume	= {56},
+  year		= {2020}
+}
+
 @Article{	  landau2020sluicing,
   author	= {Landau, Idan},
   journal	= {Syntax},
