--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  michaelis1992already,
+  author	= {Michaelis, Laura A.},
+  journal	= {Lingua},
+  number	= {4},
+  pages		= {321--339},
+  title		= {Aspect and the semantics-pragmatics interface: The case of
+		  already},
+  volume	= {87},
+  year		= {1992}
+}
+
 @Article{	  altshuler2020bynow,
   author	= {Altshuler, Daniel and Michaelis, Laura A.},
   journal	= {Journal of Linguistics},
