--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,110 @@
 
+@Article{	  chomskygallego2020,
+  author	= {Chomsky, Noam and Gallego, {\'A}ngel J.},
+  journal	= {RSEL},
+  number	= {1},
+  pages		= {7--34},
+  title		= {La facultad humana del lenguaje. Un objeto biol{\'o}gico,
+		  una ventana hacia la mente y un puente entre disciplinas},
+  volume	= {50},
+  year		= {2020}
+}
+
+@Article{	  maldekern2020definiteness,
+  author	= {Mandelkern, Matthew and Rothschild, Daniel},
+  journal	= {Nat Lang Semantics},
+  number	= {2},
+  pages		= {77--109},
+  title		= {Definiteness projection},
+  volume	= {28},
+  year		= {2019}
+}
+
+@Article{	  chen2020experientialpast,
+  author	= {Chen, Sihwei and Vander Klok, Jozina and Matthewson, Lisa
+		  and Rullmann, Hotze},
+  journal	= {Nat Lang Linguist Theory},
+  title		= {The `experiential' as an existential past},
+  year		= {2020}
+}
+
+@Article{	  mendivil-giro2020inclusivo,
+  author	= {Mend{\'i}vil-Gir{\'o}, Jos{\'e}-Luis},
+  journal	= {RSEL},
+  number	= {1},
+  pages		= {35--64},
+  title		= {El masculino inclusivo en espa{\~n}ol},
+  volume	= {50},
+  year		= {2020}
+}
+
+@Article{	  rothstein2020locations,
+  author	= {Rothstein, Susan},
+  journal	= {Journal of Semantics},
+  title		= {Locations},
+  year		= {2020}
+}
+
+@Article{	  bar-lev2020free,
+  author	= {Bar-Lev, Moshe E. and Fox, Danny},
+  journal	= {Natural Language Semantics},
+  number	= {3},
+  pages		= {175--223},
+  title		= {Free choice, simplification, and Innocent Inclusion},
+  volume	= {28},
+  year		= {2020}
+}
+
+@Article{	  hedberg2000clefts,
+  author	= {Hedberg, Nancy},
+  journal	= {Language},
+  number	= {4},
+  pages		= {891--920},
+  title		= {The Referential Status of Clefts},
+  volume	= {76},
+  year		= {2000}
+}
+
+@Article{	  charlow2020indefinites,
+  author	= {Charlow, Simon},
+  journal	= {Linguist and Philos},
+  number	= {4},
+  pages		= {427--472},
+  title		= {The scope of alternatives: indefiniteness and islands},
+  volume	= {43},
+  year		= {2019}
+}
+
+@Article{	  mckenzie2020almost,
+  author	= {McKenzie, Andrew and Newkirk, Lydia},
+  journal	= {Linguist and Philos},
+  number	= {4},
+  pages		= {389--426},
+  title		= {Almost at-a-distance},
+  volume	= {43},
+  year		= {2019}
+}
+
+@Article{	  sobin2020directing,
+  author	= {Sobin, Nicholas},
+  journal	= {Syntax},
+  number	= {3},
+  pages		= {241--274},
+  title		= {Directing Syntactic Traffic},
+  volume	= {23},
+  year		= {2020}
+}
+
+@Article{	  diti2020evidentials,
+  author	= {Bhadra, Diti},
+  number	= {3},
+  pages		= {367--423},
+  title		= {The Semantics of Evidentials in Questions},
+  volume	= {37},
+  year		= {2020},
+  doi		= {10.1093/jos/ffaa003}
+}
+
 @Article{	  michaelis1992already,
   author	= {Michaelis, Laura A.},
   journal	= {Lingua},
