--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,27 @@
 
+@Article{	  eckardt2020conjectural,
+  author	= {Eckardt, Regine},
+  journal	= {Semantics and Pragmatics},
+  number	= {9},
+  pages		= {1--17},
+  title		= {Conjectural questions: The case of German verb-final wohl
+		  questions},
+  volume	= {13},
+  year		= {2020}
+}
+
+@Article{	  tonhauser2020evaluative,
+  author	= {Tonhauser, Judith and Marneffe, Marie-Catherine de and
+		  Degen, Judith},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {87},
+  title		= {Evaluative adjective sentences: A question-based analysis
+		  of projection},
+  volume	= {5},
+  year		= {2020}
+}
+
 @Article{	  chomskygallego2020,
   author	= {Chomsky, Noam and Gallego, {\'A}ngel J.},
   journal	= {RSEL},
