--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,31 @@
+@Article{Tonhauser2020Evaluative,
+author = {Tonhauser, Judith and Marneffe, Marie-Catherine de and Degen, Judith}, 
+title = {Evaluative adjective sentences: A question-based analysis of projection}, 
+journal = {Glossa: a journal of general linguistics}, 
+volume = {5}, 
+number = {1}, 
+pages = {87}, 
+year = {2020}, 
+location = {}, 
+keywords = {evaluative adjectives; experiments; presupposition projection; questions under discussion; Copulative; Copula}}
+
+
+
+
+@Article{Hedberg2000Cleft,
+author = {Hedberg, Nancy}, 
+title = {The Referential Status of Clefts}, 
+journal = {Language}, 
+volume = {76}, 
+number = {4}, 
+pages = {891–920}, 
+year = {2000}, 
+abstract = {}, 
+location = {}, 
+keywords = {Cleft; Copulative; Copula; Predicative; Demonstrative}}
+
+
+
 @Article{Keine2019Copula,
 author = {Keine, Stefan and Wagner, Michael and Coon, Jessica}, 
 title = {Hierarchy effects in copula constructions}, 
