--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Book{		  bergqvist2020evidentiality,
+  editor	= {Bergqvist, Henrik and Kittil{\"a}, Seppo},
+  pages		= {300},
+  publisher	= {Language Science Press},
+  title		= {Evidentiality, egophoricity and engagement},
+  year		= {2020}
+}
+
 @Article{	  eckardt2020conjectural,
   author	= {Eckardt, Regine},
   journal	= {Semantics and Pragmatics},
