result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,16 @@
+@InBook{Marusic2020Copular,
+author = {Marušič, Franc and Zaucer, Rok}, 
+title = {Investigation of Slovenian copular agreement}, 
+booktitle = {Selected Proceedings of SLS 14, in Honor of Peter Kosta}, 
+editor = {Franks, Steven and Timberlake, Alan}, 
+publisher = {Peter Lang}, 
+address = {Berlin}, 
+pages = {}, 
+year = {2020}, 
+abstract = {}, 
+keywords = {slovenian; copular clauses; dual; syntax; copulative}}
+
+
 @Article{Tonhauser2020Evaluative,
 author = {Tonhauser, Judith and Marneffe, Marie-Catherine de and Degen, Judith}, 
 title = {Evaluative adjective sentences: A question-based analysis of projection}, 
