--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,28 @@
 
+@InBook{	  marusic2020copular,
+  address	= {Berlin},
+  author	= {Maru{\v s}i{\v c}, Franc and Zaucer, Rok},
+  booktitle	= {Selected Proceedings of SLS 14, in Honor of Peter Kosta},
+  editor	= {Franks, Steven and Timberlake, Alan},
+  publisher	= {Peter Lang},
+  title		= {Investigation of Slovenian copular agreement},
+  year		= {2020}
+}
+
+@Article{	  beltrama2020social,
+  author	= {Beltrama, Andrea},
+  journal	= {Language and Linguistics Compass},
+  title		= {Social meaning in semantics and pragmatics},
+  year		= {2020}
+}
+
+@Article{	  oltra-massuet2020theme,
+  author	= {Oltra-Massuet, Isabel},
+  journal	= {Oxford Research Encyclopedia of Linguistics},
+  title		= {Conjugation Class},
+  year		= {2020}
+}
+
 @Book{		  bergqvist2020evidentiality,
   editor	= {Bergqvist, Henrik and Kittil{\"a}, Seppo},
   pages		= {300},
