result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,17 @@
+@Article{Schneider2015Copula,
+author = {Schneider-Zioga, Patricia and Mutaka, Philip Ngessimo}, 
+title = {Copular clauses in Kinande}, 
+journal = {Journal of West African Languages}, 
+volume = {42}, 
+number = {2}, 
+pages = {}, 
+year = {2015}, 
+abstract = {}, 
+location = {}, 
+keywords = {Copula; African languages; Kinande; Copulatives; Bantu}}
+
+
+
 @InBook{Marusic2020Copular,
 author = {Marušič, Franc and Zaucer, Rok}, 
 title = {Investigation of Slovenian copular agreement}, 
