--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,31 @@
 
+@Article{	  schneider2015copula,
+  author	= {Schneider-Zioga, Patricia and Mutaka, Philip Ngessimo},
+  journal	= {Journal of West African Languages},
+  number	= {2},
+  title		= {Copular clauses in Kinande},
+  volume	= {42},
+  year		= {2015}
+}
+
+@Article{	  schneider2015predication,
+  author	= {Schneider-Zioga, Patricia and Mutaka, Philip Ngessimo},
+  journal	= {Journal of West African Languages},
+  number	= {2},
+  title		= {Small Clauses and Secondary Predication in Kinande},
+  volume	= {42},
+  year		= {2015}
+}
+
+@Article{	  schneider2015linker,
+  author	= {Schneider-Zioga, Patricia and Mutaka, Philip Ngessimo},
+  journal	= {Journal of West African Languages},
+  number	= {2},
+  title		= {The Linker in Kinande: A Predication Relation},
+  volume	= {42},
+  year		= {2015}
+}
+
 @InBook{	  marusic2020copular,
   address	= {Berlin},
   author	= {Maru{\v s}i{\v c}, Franc and Zaucer, Rok},
