result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,17 @@
+@Proceedings{Matushansky2005Tinker,
+author = {Matushansky, Ora and Spector, Benjamin}, 
+editor = {Maier, Emar and Bary, Corien and Huitink, Janneke}, 
+title = {Tinker, Tailor, Soldier, Spy}, 
+booktitle = {Tinker, Tailor, Soldier, Spy}, 
+volume = {}, 
+publisher = {}, 
+address = {}, 
+pages = {}, 
+year = {2005}, 
+abstract = {}, 
+keywords = {Copula; Copulative; Predicate}}
+
+
 @Article{Schneider2015Copula,
 author = {Schneider-Zioga, Patricia and Mutaka, Philip Ngessimo}, 
 title = {Copular clauses in Kinande}, 
