--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Article{	  uegaki2020existential,
+  author	= {Uegaki, Wataru},
+  journal	= {Linguistics and Philosophy},
+  title		= {The existential/uniqueness presupposition of
+		  wh-complements projects from the answers},
+  year		= {2020}
+}
+
 @Article{	  schneider2015copula,
   author	= {Schneider-Zioga, Patricia and Mutaka, Philip Ngessimo},
   journal	= {Journal of West African Languages},
@@ -317,7 +325,7 @@
 
 @Article{	  elbourne2020weather,
   author	= {Elbourne, Paul},
-  journal	= {Mind & Language},
+  journal	= {Mind \& Language},
   title		= {Weather predicates, binding, and radical contextualism},
   year		= {2020}
 }
@@ -579,7 +587,7 @@
   booktitle	= {The Wiley Blackwell Companion to Semantics},
   editor	= {Gutzmann, Daniel and Matthewson, Lisa and Meier,
 		  C{\'e}cile and Rullmann, Hotze and Zimmermann, Thomas Ede},
-  publisher	= {John Wiley & Sons},
+  publisher	= {John Wiley \& Sons},
   title		= {Nonlocal Adjectival Modification},
   year		= {2020}
 }
@@ -589,7 +597,7 @@
   booktitle	= {The Wiley Blackwell Companion to Semantics},
   editor	= {Gutzmann, Daniel and Matthewson, Lisa and Meier,
 		  C{\'e}cile and Rullmann, Hotze and Zimmermann, Thomas Ede},
-  publisher	= {John Wiley & Sons},
+  publisher	= {John Wiley \& Sons},
   title		= {Kinds of (Non)Specificity},
   year		= {2020}
 }
@@ -599,7 +607,7 @@
   booktitle	= {The Wiley Blackwell Companion to Semantics},
   editor	= {Gutzmann, Daniel and Matthewson, Lisa and Meier,
 		  C{\'e}cile and Rullmann, Hotze and Zimmermann, Thomas Ede},
-  publisher	= {John Wiley & Sons},
+  publisher	= {John Wiley \& Sons},
   title		= {Intensional Transitive Verbs},
   year		= {2020}
 }
@@ -609,7 +617,7 @@
   booktitle	= {The Wiley Blackwell Companion to Semantics},
   editor	= {Gutzmann, Daniel and Matthewson, Lisa and Meier,
 		  C{\'e}cile and Rullmann, Hotze and Zimmermann, Thomas Ede},
-  publisher	= {John Wiley & Sons},
+  publisher	= {John Wiley \& Sons},
   title		= {Semantic Parameters and Universals},
   year		= {2020}
 }
@@ -2812,7 +2820,7 @@
   author	= {P{\'e}rez-Jim{\'e}nez, Isabel and Moreno-Quib{\'e}n,
 		  Norberto},
   booktitle	= {Romance languages and linguistic theory 2009: selected
-		  papers from ``Going Romance'' Nice 2009},
+		  papers from Going Romance Nice 2009},
   editor	= {Berns, Janine and Jacobs, Haike and Scheer, Tobias},
   pages		= {255-272},
   publisher	= {{John Benjamins Publishing Company}},
@@ -4643,7 +4651,7 @@
 
 @Article{	  picallo2017a-note-on-the-l,
   author	= {Picallo, M. Carme},
-  journal	= {Borealis -- An International Journal of Hispanic
+  journal	= {Borealis. An International Journal of Hispanic
 		  Linguistics},
   number	= {1},
   pages		= {1--20},
@@ -7131,7 +7139,7 @@
   booktitle	= {Experiments at the interfaces},
   editor	= {Runner, Jeffrey},
   publisher	= {Emerald},
-  title		= {Grammatical Illusions and Selective Fallibility in Real --
+  title		= {Grammatical Illusions and Selective Fallibility in Real
 		  Time Language Comprehension},
   year		= {2011}
 }
@@ -24826,9 +24834,9 @@
 @InProceedings{	  kertz2006evaluative-adjective,
   author	= {Kertz, Laura},
   booktitle	= {Proceedings of the 25th West Coast Conference on Formal
-		  Linguistics. Somerville, {MA:} Cascadilla Proceedings
-		  Project},
+		  Linguistics},
   pages		= {229--235},
+  publisher	= {Cascadilla Press},
   title		= {Evaluative adjectives: an adjunct control analysis},
   year		= {2006}
 }
