result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,8 +1,21 @@
-@Proceedings{Matushansky2005Tinker,
+@InBook{Stowell1989Subjects,
+author = {Stowell, Tim}, 
+title = {Subjects, Specficiers and X-Bar theory}, 
+booktitle = {Alternative conceptions of phrase structure}, 
+editor = {Baltin, Mark R. and Kroch, Anthony S.}, 
+publisher = {University of Chicago Press}, 
+address = {Chicago}, 
+pages = {232-262}, 
+year = {1989}, 
+abstract = {}, 
+keywords = {Phrase structure; Predication; Predicate; Copulative; Small Clauses}}
+
+
+@InProceedings{Matushansky2005Tinker,
 author = {Matushansky, Ora and Spector, Benjamin}, 
 editor = {Maier, Emar and Bary, Corien and Huitink, Janneke}, 
 title = {Tinker, Tailor, Soldier, Spy}, 
-booktitle = {Tinker, Tailor, Soldier, Spy}, 
+booktitle = {Proceedings of SuB9}, 
 volume = {}, 
 publisher = {}, 
 address = {}, 
