result-reduced copulative

--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,104 @@
 
+@InBook{	  irurtzun2020whatted,
+  address	= {Berlin},
+  author	= {Irurtzun, Aritz},
+  booktitle	= {Syntactic architecture and its consequences I: Syntax
+		  inside the grammar},
+  editor	= {B{\'a}r{\'a}ny, Andr{\'a}s and Biberauer, Theresa and
+		  Douglas, Jaime and Vikner, Sten},
+  pages		= {293-316},
+  publisher	= {Language Science Press},
+  title		= {Revisiting the lack of verbal wh-words},
+  year		= {2020}
+}
+
+@Article{	  lohndal2011interrogative,
+  author	= {Lohndal, Terje and Pietroski, Paul},
+  journal	= {Linguistic Analysis},
+  pages		= {459--516},
+  title		= {Interrogatives, instructions, and I-languages: An
+		  I-semantics for questions},
+  volume	= {37},
+  year		= {2011}
+}
+
+@Book{		  rothstein2004predicates,
+  author	= {Rothstein, Susan},
+  pages		= {352},
+  publisher	= {Springer},
+  title		= {Predicates and Their Subjects},
+  year		= {2004}
+}
+
+@Article{	  mallen1991secondary,
+  author	= {Mall{\'e}n, Enrique},
+  journal	= {Journal of Linguistics},
+  number	= {2},
+  pages		= {375--403},
+  title		= {A syntactic analysis of secondary predication in Spanish},
+  volume	= {27},
+  year		= {1991}
+}
+
+@Article{	  rothstein1991binding,
+  author	= {Rothstein, Susan},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {572--578},
+  title		= {Binding, C-Command, and Predication},
+  volume	= {22},
+  year		= {1991}
+}
+
+@InBook{	  rothstein1991small,
+  author	= {Rothstein, Susan},
+  booktitle	= {Small Clauses},
+  editor	= {Cardinaletti, Anna and Guasti, Maria Teresa},
+  pages		= {27-48},
+  publisher	= {Brill Academic Pub},
+  title		= {Small clauses and copular constructions},
+  year		= {1995}
+}
+
+@Book{		  cardinaletti1995small,
+  editor	= {Cardinaletti, Anna and Guasti, Maria Teresa},
+  pages		= {333},
+  publisher	= {Brill Academic Pub},
+  title		= {Small Clauses},
+  year		= {1995}
+}
+
+@InBook{	  rothstein1991heads,
+  address	= {Dordrecht},
+  author	= {Rothstein, Susan},
+  booktitle	= {Views on Phrase Structure},
+  editor	= {Bouchard, Denis and Leffel, Katherine},
+  pages		= {97-112},
+  publisher	= {Springer Netherlands},
+  title		= {Heads, Projections, and Category Determination},
+  year		= {1991}
+}
+
+@InBook{	  stowell1989subjects,
+  address	= {Chicago},
+  author	= {Stowell, Tim},
+  booktitle	= {Alternative conceptions of phrase structure},
+  editor	= {Baltin, Mark R. and Kroch, Anthony S.},
+  pages		= {232-262},
+  publisher	= {University of Chicago Press},
+  title		= {Subjects, Specficiers and X-Bar theory},
+  year		= {1989}
+}
+
+@Book{		  baltin1989alternative,
+  address	= {Chicago},
+  editor	= {Baltin, Mark R. and Kroch, Anthony S.},
+  pages		= {315},
+  publisher	= {University of Chicago Press},
+  title		= {Alternative conceptions of phrase structure},
+  year		= {1989}
+}
+
 @Article{	  uegaki2020existential,
   author	= {Uegaki, Wataru},
   journal	= {Linguistics and Philosophy},
