--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,29 @@
+@Book{Rothstein2004Predicates,
+author = {Rothstein, Susan}, 
+title = {Predicates and Their Subjects}, 
+volume = {}, 
+pages = {352}, 
+editor = {}, 
+publisher = {Springer}, 
+address = {}, 
+year = {2004}, 
+keywords = {Predication; Small Clause; Copula; Predicative; Copulative sentence}}
+
+
+
+@InBook{Rothstein1991Small,
+author = {Rothstein, Susan}, 
+title = {Small clauses and copular constructions}, 
+booktitle = {Small Clauses}, 
+editor = {Cardinaletti, Anna and Guasti, Maria Teresa}, 
+publisher = {Brill Academic Pub}, 
+address = {}, 
+pages = {27-48}, 
+year = {1995}, 
+abstract = {}, 
+keywords = {Small Clauses; Copula; Copulative; Predication}}
+
+
 @InBook{Stowell1989Subjects,
 author = {Stowell, Tim}, 
 title = {Subjects, Specficiers and X-Bar theory}, 
