--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,61 @@
 
+@Book{		  moreno-cabrera2017claves,
+  address	= {Madrid},
+  author	= {Moreno-Cabrera, Juan Carlos},
+  publisher	= {S{\'i}ntesis},
+  title		= {Claves hist{\'o}ricas de la ling{\"u}{\'i}stica actual},
+  year		= {2017}
+}
+
+@Book{		  moreno-cabrera2015lenguaje,
+  address	= {Madrid},
+  author	= {Moreno-Cabrera, Juan Carlos},
+  publisher	= {Euphonia Ediciones},
+  title		= {Del lenguaje a las lenguas. Tratado Did{\'a}ctico y
+		  Cr{\'i}tico de Ling{\"u}{\'i}stica General},
+  volume	= {1 (El lenguaje)},
+  year		= {2015}
+}
+
+@Book{		  moreno-cabrera2015lenguas,
+  address	= {Madrid},
+  author	= {Moreno-Cabrera, Juan Carlos},
+  publisher	= {Euphonia Ediciones},
+  title		= {Del lenguaje a las lenguas. Tratado Did{\'a}ctico y
+		  Cr{\'i}tico de Ling{\"u}{\'i}stica General},
+  volume	= {2 (Las lenguas)},
+  year		= {2015}
+}
+
+@Article{	  embick2015neurobiology,
+  author	= {Embick, David and Poeppel, David},
+  journal	= {Lang Cogn Neurosci},
+  number	= {4},
+  pages		= {357--366},
+  title		= {Towards a computational(ist) neurobiology of language:
+		  Correlational, integrated, and explanatory
+		  neurolinguistics.},
+  volume	= {30},
+  year		= {2015}
+}
+
+@Book{		  mcginn2000identity,
+  author	= {McGinn, Colin},
+  pages		= {114},
+  publisher	= {Oxford University Press},
+  title		= {Logical Properties: Identity, Existence, Predication,
+		  Necessity, Truh},
+  year		= {2000}
+}
+
+@Book{		  cinque2020relative,
+  address	= {Cambridge},
+  author	= {Cinque, Guglielmo},
+  publisher	= {Cambridge University Press},
+  title		= {The Syntax of Relative Clauses},
+  year		= {2020}
+}
+
 @InBook{	  irurtzun2020whatted,
   address	= {Berlin},
   author	= {Irurtzun, Aritz},
