result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,29 @@
+@Article{Arregi2020Specificational,
+author = {Arregi, Karlos and Francez, Itamar and Martinović, Martina}, 
+title = {Three arguments for an individual concept analysis of specificational sentences}, 
+journal = {Natural Language & Linguistic Theory}, 
+volume = {}, 
+number = {}, 
+pages = {}, 
+year = {2020}, 
+location = {}, 
+keywords = {Copular sentences; copula; Predication and predicate inversion; Individual concepts; Specificational sentences}}
+
+
+@Article{Barros2016Specificational,
+author = {Barros, Matthew}, 
+title = {Specification as an inter-taxonomic phenomenon}, 
+journal = {Ms., Yale University}, 
+volume = {}, 
+number = {}, 
+pages = {}, 
+year = {2016}, 
+abstract = {}, 
+location = {}, 
+keywords = {copula; copulative; predication; specificational}}
+
+
+
 @Book{Rothstein2004Predicates,
 author = {Rothstein, Susan}, 
 title = {Predicates and Their Subjects}, 
