--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,38 @@
 
+@Article{	  arregi2020specificational,
+  author	= {Arregi, Karlos and Francez, Itamar and Martinovi{\'c},
+		  Martina},
+  journal	= {Natural Language & Linguistic Theory},
+  title		= {Three arguments for an individual concept analysis of
+		  specificational sentences},
+  year		= {2020}
+}
+
+@Article{	  barros2016specificational,
+  author	= {Barros, Matthew},
+  journal	= {Ms., Yale University},
+  title		= {Specification as an inter-taxonomic phenomenon},
+  year		= {2016}
+}
+
+@Book{		  lobner2013semantics,
+  address	= {New York, NY},
+  author	= {L{\"o}bner, Sebastian},
+  pages		= {379},
+  publisher	= {Routledge},
+  title		= {Understanding semantics},
+  year		= {2013}
+}
+
+@Article{	  citko2020conjunction,
+  author	= {Citko, Barbara and Gra{\v c}anin-Yuksek, Martina},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Conjunction saves multiple sluicing: How *(and) why},
+  volume	= {5},
+  year		= {2020}
+}
+
 @Book{		  moreno-cabrera2017claves,
   address	= {Madrid},
   author	= {Moreno-Cabrera, Juan Carlos},
