--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,53 @@
 
+@PhDThesis{	  hiu2015epistemicism,
+  address	= {Austin},
+  author	= {Hiu, Ivan J.},
+  school	= {University of Texas},
+  title		= {Epistemicism},
+  year		= {2015}
+}
+
+@Book{		  soames2010meaning,
+  author	= {Soames, Scott},
+  pages		= {144},
+  publisher	= {Princeton University Press},
+  title		= {What Is Meaning},
+  year		= {2010}
+}
+
+@Article{	  siu2020absolute,
+  author	= {Siu, Charlie},
+  journal	= {Linguistics and Philosophy},
+  title		= {`Absolute' adjectives in belief contexts},
+  year		= {2020}
+}
+
+@Article{	  szabo2000compositionality,
+  author	= {Szab{\'o}, Zolt{\'a}n Gendler},
+  journal	= {Linguistics and Philosophy},
+  number	= {5},
+  pages		= {475--505},
+  title		= {Compostionality as supervenience},
+  volume	= {23},
+  year		= {2000}
+}
+
+@Article{	  delprete2020gender,
+  author	= {Del Prete, Fabio and Zucchi, Sandro},
+  journal	= {Linguistics and Philosophy},
+  title		= {Gender in conditionals},
+  year		= {2020}
+}
+
+@PhDThesis{	  anderson2020perspectives,
+  address	= {Amherst},
+  author	= {Anderson, Carolyn Jane},
+  school	= {University of Massachusetts},
+  title		= {Shitfing the perspectival landscape: Methods for
+		  enconding, identifying, and selecting perspectives},
+  year		= {2020}
+}
+
 @Article{	  arregi2020specificational,
   author	= {Arregi, Karlos and Francez, Itamar and Martinovi{\'c},
 		  Martina},
